@@ -1,11 +1,8 @@
 package com.itu.visabackoffice.controller;
 
 import com.itu.visabackoffice.dto.ApiResponse;
-import com.itu.visabackoffice.dto.DonneesDemandeVisaDTO;
-import com.itu.visabackoffice.dto.DemandeVisaSaisieDTO;
-import com.itu.visabackoffice.dto.DemandeVisaCplDTO;
+import com.itu.visabackoffice.dto.DemandeFicheDTO;
 import com.itu.visabackoffice.dto.DemandeurDemandesDTO;
-import java.util.List;
 import com.itu.visabackoffice.services.DemandeVisaService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -35,61 +32,53 @@ public class DemandeurRestController {
   @Autowired
   private DemandeVisaService demandeVisaService;
 
-    @GetMapping("/ok")
-    public String getDemandeurAvecDemandes(){
-        System.out.println("ok");
-        return "ok";
-    }
+  // ================== GET: LECTURES ==================
 
   /**
-   * Endpoint pour récupérer un demandeur et la liste de ses demandes.
-   * Si le numero commence par "PASS", il est traité comme numero de passeport,
-   * sinon comme numero de demande.
-   * @param numero le numero de passeport (PASS...) ou le numero de demande
-   * @return ApiResponse avec le demandeur et ses demandes
+   * Endpoint pour rechercher un demandeur et ses demandes par numero de passeport (PASSXXXX) ou ID de demande (XXXX)
+   * @param numero format: PASSXXXX (passeport) ou XXXX (ID demande)
+   * @return ApiResponse avec demandeur et liste de ses demandes
    */
-  @GetMapping("/demandes")
-  public ResponseEntity<ApiResponse<DemandeurDemandesDTO>> getDemandeurAvecDemandes(
-      @RequestParam(name = "numero", required = false) String numero,
-      HttpServletRequest request) {
+  @GetMapping("/search")
+  public ResponseEntity<ApiResponse<DemandeurDemandesDTO>> searchDemandeurByNumero(
+      @RequestParam String numero) {
     try {
-      String inputNumero = numero;
-      if (inputNumero == null || inputNumero.isBlank()) {
-        String queryString = request.getQueryString();
-        if (queryString != null && !queryString.isBlank() && !queryString.contains("=")) {
-          inputNumero = queryString.trim();
-        }
-      }
+      log.info("Recherche demandeur par numero: {}", numero);
 
-      if (inputNumero == null || inputNumero.isBlank()) {
-        throw new IllegalArgumentException("Le numero est obligatoire");
-      }
-
-      log.info("Recherche demandeur et demandes par numero: {}", inputNumero);
-
-      DemandeurDemandesDTO resultat = demandeVisaService.getDemandeurAvecDemandesParNumero(inputNumero);
-
-      if (resultat != null) {
-        ApiResponse<DemandeurDemandesDTO> response = ApiResponse.success(
-            resultat,
-            "Demandeur et demandes récupérés avec succès"
+      if (numero == null || numero.trim().isEmpty()) {
+        ApiResponse<DemandeurDemandesDTO> response = ApiResponse.error(
+            400,
+            "Le numero de passeport ou demande est obligatoire",
+            "Format attendu: PASSXXXX ou XXXX"
         );
-        return ResponseEntity.ok(response);
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(response);
+      }
+
+      DemandeurDemandesDTO resultat = demandeVisaService.getDemandeurAvecDemandesParNumero(numero);
+
+      if (resultat == null || resultat.getDemandes() == null || resultat.getDemandes().isEmpty()) {
+        ApiResponse<DemandeurDemandesDTO> response = ApiResponse.error(
+            404,
+            "Aucune demande trouvée pour ce numero",
+            "Veuillez verifier le numero saisi"
+        );
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(response);
       }
 
       ApiResponse<DemandeurDemandesDTO> response = ApiResponse.success(
-          null,
-          "Aucun demandeur trouvé avec ce numero"
+          resultat,
+          "Demandeur et ses demandes récupérées avec succès"
       );
+
       return ResponseEntity.ok(response);
 
-    } catch (RuntimeException e) {
-      log.error("Erreur métier recherche demandeur: {}", e.getMessage());
+    } catch (IllegalArgumentException e) {
+      log.warn("Argument invalide pour recherche demandeur: {}", e.getMessage());
 
       ApiResponse<DemandeurDemandesDTO> response = ApiResponse.error(
           400,
           e.getMessage(),
-          "Erreur lors de la recherche du demandeur"
+          "Format attendu: PASSXXXX ou XXXX"
       );
 
       return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(response);
@@ -98,6 +87,50 @@ public class DemandeurRestController {
       log.error("Erreur inattendue recherche demandeur: {}", e.getMessage(), e);
 
       ApiResponse<DemandeurDemandesDTO> response = ApiResponse.error(
+          500,
+          "Erreur serveur interne",
+          "Une erreur inattendue s'est produite"
+      );
+
+      return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
+    }
+  }
+
+  /**
+   * Endpoint pour récupérer les détails d'une demande (fiche) avec historique des statuts
+   * @param demandeId l'ID de la demande
+   * @return ApiResponse avec les détails de la demande et l'historique
+   */
+  @GetMapping("/demande-fiche/{id}")
+  public ResponseEntity<ApiResponse<DemandeFicheDTO>> getDemandeFiche(
+      @PathVariable("id") Integer demandeId) {
+    try {
+      log.info("Récupération fiche demande ID: {}", demandeId);
+
+      DemandeFicheDTO resultat = demandeVisaService.getDemandeFiche(demandeId);
+
+      ApiResponse<DemandeFicheDTO> response = ApiResponse.success(
+          resultat,
+          "Fiche demande récupérée avec succès"
+      );
+
+      return ResponseEntity.ok(response);
+
+    } catch (RuntimeException e) {
+      log.error("Erreur métier récupération fiche demande: {}", e.getMessage());
+
+      ApiResponse<DemandeFicheDTO> response = ApiResponse.error(
+          400,
+          e.getMessage(),
+          "Erreur lors de la récupération de la fiche demande"
+      );
+
+      return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(response);
+
+    } catch (Exception e) {
+      log.error("Erreur inattendue récupération fiche demande: {}", e.getMessage(), e);
+
+      ApiResponse<DemandeFicheDTO> response = ApiResponse.error(
           500,
           "Erreur serveur interne",
           "Une erreur inattendue s'est produite"
